feat: improved everything